Bug 213243 - kget/extensions/konqueror/kget_plug_in.cpp:39:24: error: webkitview.h: No such file or directory
Summary: kget/extensions/konqueror/kget_plug_in.cpp:39:24: error: webkitview.h: No suc...
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: konqextension (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Other
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-05 13:40 UTC by Taurnil
Modified: 2009-11-07 16:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Taurnil 2009-11-05 13:40:22 UTC
Version:            (using KDE 4.3.3)
Compiler:          gcc-4.4.2 
OS:                Other
Installed from:    Compiled From Sources

[ 17%] Built target khtml_kget_automoc
[ 17%] Generating kget_interface.cpp, kget_interface.h
[ 17%] Generating kget_interface.moc
Scanning dependencies of target khtml_kget
[ 17%] Building CXX object kget/extensions/konqueror/CMakeFiles/khtml_kget.dir/khtml_kget_automoc.o
[ 17%] Building CXX object kget/extensions/konqueror/CMakeFiles/khtml_kget.dir/kget_plug_in.o
/usr/src/kdenetwork-4.3.3/kget/extensions/konqueror/kget_plug_in.cpp:39:24: error: webkitview.h: No such file or directory
/usr/src/kdenetwork-4.3.3/kget/extensions/konqueror/kget_plug_in.cpp: In member function 'void KGet_plug_in::slotShowDrop()':
/usr/src/kdenetwork-4.3.3/kget/extensions/konqueror/kget_plug_in.cpp:118: error: cannot convert 'QWebView*' to 'QWidget*' in assignment
/usr/src/kdenetwork-4.3.3/kget/extensions/konqueror/kget_plug_in.cpp: In member function 'void KGet_plug_in::showLinks(bool)':
/usr/src/kdenetwork-4.3.3/kget/extensions/konqueror/kget_plug_in.cpp:169: error: invalid use of incomplete type 'struct QWebView'
/opt/lunar/kde/4/include/webkitkde/webkitpart.h:37: error: forward declaration of 'struct QWebView'
make[2]: *** [kget/extensions/konqueror/CMakeFiles/khtml_kget.dir/kget_plug_in.o] Error 1
make[1]: *** [kget/extensions/konqueror/CMakeFiles/khtml_kget.dir/all] Error 2
make: *** [all] Error 2
Comment 1 Taurnil 2009-11-05 13:42:02 UTC
Using webkit-1.1.15.3 and latest svn of webkitkde.
Comment 2 Urs Wolfer 2009-11-05 22:29:29 UTC
r1038919 from trunk needs to be backported; I do not have the possibilty to backport right now.
Comment 3 Christoph Feck 2009-11-05 23:26:08 UTC
Urs, is backporting safe, or would it break users of "old" KdeWebKit?
Comment 4 Taurnil 2009-11-06 12:34:37 UTC
I will be happy to try any patches.
Comment 5 Urs Wolfer 2009-11-07 16:53:42 UTC
(In reply to comment #3)
> Urs, is backporting safe, or would it break users of "old" KdeWebKit?

Yes, it should not break anything for people who are compiling against an old version.

I will apply it now.
Comment 6 Urs Wolfer 2009-11-07 16:54:04 UTC
SVN commit 1046123 by uwolfer:

Backport:
SVN commit 1038919 by cfeck:

Compile with latest WebKitKDE

BUG:213243

 M  +0 -2      CMakeLists.txt  
 M  +1 -5      kget_plug_in.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046123