Backport: SVN commit 1038919 by cfeck:

Compile with latest WebKitKDE

BUG:213243

svn path=/branches/KDE/4.3/kdenetwork/kget/; revision=1046123